test_regress/t/t_mailbox_class.out
%Error-UNSUPPORTED: t/t_mailbox_class.v:21:25: Unsupported: event controls in methods
                                             : ... In instance $unit::mailbox_cls
   21 |       if (m_bound != 0) wait (m_q.size() < m_bound);
      |                         ^~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_mailbox_class.v:35:7: Unsupported: event controls in methods
                                            : ... In instance $unit::mailbox_cls
   35 |       wait (m_q.size() != 0);
      |       ^~~~
%Error-UNSUPPORTED: t/t_mailbox_class.v:49:7: Unsupported: event controls in methods
                                            : ... In instance $unit::mailbox_cls
   49 |       wait (m_q.size() != 0);
      |       ^~~~
%Error-UNSUPPORTED: t/t_mailbox_class.v:21:31: Unsupported: Cannot detect changes on expression of complex type (see combinational cycles reported by UNOPTFLAT)
   21 |       if (m_bound != 0) wait (m_q.size() < m_bound);
      |                               ^~~
%Error: Exiting due to
